# AiEngine

./: CMakeLists.txt  main.cpp
AiEngine/: Engine.h  EngineState.h  InputProcessor.h
AiLogger/: Log.cpp  Log.h
AiSpeaker/: AiSpeaker.cpp  AiSpeaker.h
Layers/AiBrain/: Brain.h
Layers/Layer/: Layer.h
Layers/Nodes/: Node.h  NodeUtils.h
Planning/: Architecture.dia  Architecture.dia.autosave
Processors/: InitializationProcessor.h
